# napari-video

./: .gitignore  LICENSE  README.md  pyproject.toml  setup.py
.napari/: config.yml
src/napari_video/: __init__.py  napari.yaml  napari_video.py
tests/: test.ipynb  test_vrNP.ipynb
