[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "napari_video"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/postpop/napari_video"
classifiers = ["License :: OSI Approved :: MIT License", "Framework :: napari"]
description-file = "README.md"

