[build-system]
requires = ["flit_core >=2,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.metadata]
module = "napari_video"
author = "Jan Clemens"
author-email = "clemensjan@googlemail.com"
home-page = "https://github.com/janclemenslab/napari-video"
classifiers = ["License :: OSI Approved :: MIT License", "Framework :: napari"]
requires-python = ">=3.6"
requires = ['numpy', 'pyvideoreader']
description-file = "README.md"

[tool.flit.entrypoints."napari.plugin"]
video = "napari_video.napari_video"
